@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US006

class Organization {
}

class Vehicle {
    brand
    model
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenanceCheckUpFrequency
    plateNumber
    type
}

class FleetManager {
    name
}

class Type {
    passengersOrMixed
    lightOrHeavy
    openBoxOrClosedVansOrTrucks
}

Organization "1" -- "1" FleetManager : has >
Organization "1" -- "1..*" Vehicle : owns >
FleetManager "1" -- "1..*" Vehicle : register >
Vehicle "0..*" -- "1" Type : cataloged as >

@enduml